--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -10,6 +10,7 @@ appearance:
   theme_night: minimal
   font: minimal
   font_size: L
+  mode: light
 
 # SEO
 
@@ -66,11 +67,11 @@ features:
     theme_light: github-light
     theme_dark: dracula
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/jiachi-Liu/website'
     content_dir: content
     branch: main
   avatar:
